--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .hero {
             position: relative;
             height: 100vh;
-            background: url('images/Bluebell.jpg') no-repeat center center/cover;
+            background: url('images/Bluebells.jpg') no-repeat center center/cover;
         }
 
         .hero h1 {
