--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             <!-- Add more story text here -->
         </div>
         <div class="gallery">
-            <img src="photo1.jpg" alt="Photo 1">
-            <img src="photo2.jpg" alt="Photo 2">
-            <img src="photo3.jpg" alt="Photo 3">
+            <img src='images/EmmieJosh1' alt="Photo 1">
+            <img src='images/EmmieJosh2' alt="Photo 2">
+            <img src='images/EmmieJosh3' alt="Photo 3">
         </div>
     </section>
 
