--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
     <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-        <p>Joshua and Emily met on a hiking trip in Shenandoah, bonding over their love for nature and adventure...</p>
+        <p>Emily first saw Joshua at the NOVA Manassas Campus bookstore, where he worked, and she was working for campus IT. For Emily, it was love at first sight. Nicknamed the "cute bookstore guy" by her family, Joshua unknowingly began to play a special role in her life.
+
+During the COVID pandemic, despite masks and work windows separating them, their friendship blossomed. Through funny faces, brief passing conversations, and even shared moments behind the glass, they grew closer.
+
+Their unique connection led to countless lunch "dates," trips to the grocery store, and notes scribbled on coffee cups. Finally, on January 19th, 2022, Joshua asked Emily out, and the rest, as they say, is history.
+
+After talking and dating for over a year, Emily and Joshua took the next big step in their journey, moving in together in late October 2022. Since then, they've filled their home with love—and quite a few furry (and scaly) companions! They've welcomed three cats, Moose, Benny, and Moony, along with two tortoises, Raph (Joshua's first baby) and Peanut, as well as their leopard gecko, Casper.
+
+Now, as they prepare for their next adventure as husband and wife, Emily and Joshua are excited to continue growing, laughing, and building a life together.</p>
         <div class="gallery">
             <img id="slide" src='images/EmmieJosh1.jpg' alt="Photo 1">
         </div>
