Update index.html add photots

--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@
             'images/EmmieJosh1.jpg',
             'images/EmmieJosh2.jpg',
             'images/EmmieJosh3.jpg'
+            'images/EmmieJosh4.jpg'
+            'images/EmmieJosh5.jpg'
+            'images/EmmieJosh6.jpg'
+            'images/EmmieJosh7.jpg'
+            'images/EmmieJosh8.jpg'
+            'images/EmmieJosh9.jpg'
+            'images/EmmieJosh10.jpg'
+            'images/EmmieJosh11jpg'
+            'images/EmmieJosh12.jpg'
+            'images/EmmieJosh13.jpg'
+            'images/EmmieJosh14.jpg'
+            'images/EmmieJosh15.jpg'
+            'images/EmmieJosh16.jpg'
         ];
         let currentIndex = 0;
 
