--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
     <!-- Our Registry Section -->
     <section id="registry">
         <h2>Our Registry</h2>
+        <p>Thank you so much for being a part of this special time in our lives! Your love, support, and presence mean the world to us as we embark on this exciting journey together.</p>
+        <p></p>If you would like to help us build our new life, we have created a home fund that will go towards the purchase of our new home, as well as furniture and other essentials to make it our own. Please know that your contribution is greatly appreciated, but your presence at our celebration is the most important gift of all.</p>
         <p><a href="https://www.honeyfund.com/site/TyingTheTeboes">Visit Our Honeyfund Registry</a></p>
     </section>
 
