--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         font-family: 'Arial', sans-serif;
         background-color: #FDF8F3; /* Soft white background */
         color: #3E2F2F; /* Dark brown text */
+        text-align: center; /* Center all text */
     }
 
     /* Handwritten font for headers */
     h1, h2 {
         font-family: 'Dancing Script', cursive; /* Handwritten cursive font */
-        text-align: center;
     }
 
     /* Hero Section */
@@ -38,7 +38,6 @@
         font-family: 'Georgia', serif;
         font-size: 24px;
         color: #FDF8F3;
-        text-align: center;
     }
 
     /* Sticky Navbar */
@@ -84,7 +83,6 @@
         font-family: 'Arial', sans-serif;
         font-size: 16px;
         line-height: 1.5;
-        text-align: center;
         margin-bottom: 10px; /* Reduce bottom margin for tighter spacing */
     }
 
