--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <h2>Event Details</h2>
         <p>Date: September 12, 2025</p>
         <p>Location: Bull Run Regional Park, Centreville, Virginia</p>
-        <p>Dress Code: Outdoor Casual</p>
+        <p>Dress Code: Outdoor Casual – think flannels, jeans, and classy camping clothes. Come comfortable, but with a touch of rustic charm!</p>
         <div class="countdown" id="countdown-timer"></div>
     </section>
 
