--- a/index.html
+++ b/index.html
@@ -231,16 +231,16 @@
     <!-- Our FAQ Section -->
     <section id="faqs">
         <h2>Frequently Asked Questions</h2>
-        <p><strong>What type of shoes should I wear?</strong></p>
-    <p>We recommend wearing flat shoes or comfortable footwear, as the terrain consists mostly of gravel paths and grassy areas. Stilettos or thin heels may not be ideal for navigating the outdoor setting. Opt for wedges, sandals, or even cute boots that fit the camp vibe!</p>
-    <p><strong>Are kids allowed?</strong></p>
-    <p>Yes, kids are welcome at our wedding! We want the celebration to be fun for guests of all ages. There will be activities and plenty of space for the little ones to enjoy themselves. However, if you need a quiet space for naps or downtime, we will have a designated area available.</p>
-    <p><strong>Is everything in the same location?</strong></p>
-    <p>Yes, all events—including the ceremony, reception, and any additional activities—will be within walking distance of each other at Bull Run Regional Park. For guests who may have difficulty walking longer distances, we will provide transportation assistance, such as golf carts, to ensure everyone can move comfortably between locations.</p>
-    <p><strong>How should I RSVP?</strong></p>
-    <p>We will be providing more information on how to RSVP as we get closer to the wedding date. Keep an eye out for updates via email or on this website. Your timely response is greatly appreciated so we can plan accordingly!</p>
     <p><strong>What should I wear?</strong></p>
     <p>Outdoor Casual – embrace the camp vibes with flannels, jeans, and "classy camping" attire. Think rustic elegance and comfy outdoor wear!</p>
+    <p><strong>What type of shoes should I wear?</strong></p>
+    <p>We recommend wearing flat shoes or comfortable footwear, as the terrain consists mostly of gravel paths and grassy areas. Stilettos or thin heels may not be ideal for navigating the outdoor setting. Opt for wedges, sandals, or even cute boots that fit the camp vibe!</p>
+    <p><strong>Are kids allowed?</strong></p>
+    <p>Yes, kids are welcome at our wedding! We want the celebration to be fun for guests of all ages. There will be activities and plenty of space for the little ones to enjoy themselves. However, if you need a quiet space for naps or downtime, we will do our best to have a designated area available.</p>
+    <p><strong>Is everything in the same location?</strong></p>
+    <p>Yes, all events—including the ceremony, reception, and any additional activities—will be within walking distance of each other at Bull Run Regional Park. For guests who may have difficulty walking longer distances, we will provide transportation assistance, such as utility carts, to ensure everyone can move comfortably between locations.</p>
+    <p><strong>How should I RSVP?</strong></p>
+    <p>We will be providing more information on how to RSVP as we get closer to the wedding date. Keep an eye out for a formal invitation or on this website. Your timely response is greatly appreciated so we can plan accordingly!</p>
     <p><strong>Will the wedding be indoors or outdoors?</strong></p>
     <p>Both the ceremony and reception will be outdoors, so plan accordingly for weather.</p>
     <p><strong>What happens if it rains?</strong></p>
