--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
     <p><strong>Will the wedding be indoors or outdoors?</strong></p>
     <p>Both the ceremony and reception will be outdoors, so plan accordingly for weather.</p>
     <p><strong>What happens if it rains?</strong></p>
-    <p>We have a covered area for the reception, and the ceremony will take place rain or shine. Pack an umbrella just in case!</p> </section>
+    <p>We have a covered area for the reception, and the ceremony will take place rain or shine. Pack an umbrella just in case!</p>
+    <p><strong>Have additional questions?</strong></p>
+    <p>Please reach out to TyingTheTeboes@gmail.com and we will get right back to you!</p> </section>
     <script>
         // Sticky Navbar Effect
         window.onscroll = function() {
