--- a/OurStory.HTML
+++ b/OurStory.HTML
@@ -161,14 +161,14 @@
     <!-- Our Story Section -->
     <section id="our-story">
         <h2>Our Story</h2>
-        <div class="left-column">
-            <img src="images/campsite2.png" alt="Campsite Illustration">
-            <p>Emily first saw Joshua at the NOVA Manassas Campus bookstore, where he worked, and she was working for campus IT. For Emily, it was love at first sight. Nicknamed the "cute bookstore guy" by her family, Joshua unknowingly began to play a special role in her life.</p>
-            <p>Emily's first words to Joshua were, "How difficult can I be?" and in that moment, Joshua knew she would be a handful. Yet, it only made him more intrigued by her bold and playful personality.</p>
-            <p>During the COVID pandemic, despite masks and work windows separating them, their friendship blossomed. Through funny faces, brief passing conversations, and even shared moments behind the glass, they grew closer.</p>
-            <p>Their unique connection led to countless lunch "dates" to the grocery store, late-night snack runs, and notes scribbled on coffee cups. Finally, on January 19th, 2022, Joshua asked Emily out, and the rest, as they say, is history.</p>
-            <p>After talking and dating for over a year, Emily and Joshua took the next big step in their journey, moving in together in late October 2022. Since then, they've filled their home with love—and quite a few furry (and scaly) companions! They've welcomed three cats, Moose, Benny, and Moony, along with two tortoises, Raph (Joshua's first baby) and Peanut, as well as their leopard gecko, Casper.</p>
-        </div>
+            <div class="left-column">
+                <img src="images/campsite2.png" alt="Campsite Illustration">
+                <p>Emily first spotted Joshua at the NOVA Manassas Campus bookstore, where he worked while she was part of the campus IT team. Her family quickly dubbed him the "cute bookstore guy," completely unaware that he’d eventually become much more than that.</p>
+                <p>Her first words to him? "How difficult can I be?" That was Joshua’s first clue that Emily was going to keep him on his toes. And, well, he wasn’t wrong.</p>
+                <p>During the COVID pandemic, with masks and work windows between them, their friendship grew in the silliest ways—funny faces, quick chats, and even a few notes passed behind the glass.</p>
+                <p>Before long, their routine included grocery store lunch "dates," late-night snack runs, and messages scribbled on coffee cups. Then, on January 19th, 2022, Joshua finally made it official and asked Emily out. From there, things just kept getting better.</p>
+                <p>After a year of dating, they took the next big step and moved in together in late October 2022. Their home quickly filled with love—plus a few extra paws and claws. Now, they share their space with three cats (Moose, Benny, and Moony), two tortoises (Raph, Joshua’s first baby, and Peanut), and a leopard gecko named Casper.</p>
+            </div>
         <div class="right-column">
             <img id="slide" src="images/EmmieJosh1.jpg" alt="Photo 1">
         </div>
@@ -179,10 +179,10 @@
         <h2>Fun Facts</h2>
         <div class="facts">
             <div class="fact" onclick="toggleFact(this, 'Who made the first move?', 'Emily actually made the first move!')">Who made the first move?</div>
-            <div class="fact" onclick="toggleFact(this, 'Who said \'I love you\' first?', 'Joshua accidentally said it while saying our goodbyes Emily was leaving one evening.')">Who said 'I love you' first?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where did the proposal happen?', 'After opening presents on Christmas Eve, Josh commented he had one more present. He proposed in front of our Christmas tree on Christmas Eve.')">Where did the proposal happen?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where are you going for your honeymoon?', 'We are headed to the nearby mountains for a couple days of rest and relaxation.')">Where are you going for your honeymoon?</div>
-            <div class="fact" onclick="toggleFact(this, 'Where was your first date?', 'Our first date was to the Cinemark to watch DnD for 5 hours and have snacks.')">Where was your first date?</div>
+            <div class="fact" onclick="toggleFact(this, 'Who said \'I love you\' first?', 'Joshua accidentally said it while saying our goodbyes when Emily was leaving one evening.')">Who said 'I love you' first?</div>
+            <div class="fact" onclick="toggleFact(this, 'Where did the proposal happen?', 'After opening presents on Christmas Eve, Josh smiled and said he had one more gift. Then, in front of our Christmas tree, he got down on one knee and proposed.')">Where did the proposal happen?</div>
+            <div class="fact" onclick="toggleFact(this, 'Where are you going for your honeymoon?', 'The newlywed couple plans to stay nearby to catch up with family and enjoy a few days of rest and relaxation.')">Where are you going for your honeymoon?</div>
+            <div class="fact" onclick="toggleFact(this, 'Where was your first date?', 'While Emily still debates the details of their first date, both agree that one of their most memorable outings was spending five hours watching DnD and indulging in movie theater junk food.')">Where was your first date?</div>
         </div>
     </section>
 
