--- a/QA.html
+++ b/QA.html
@@ -77,7 +77,7 @@
             color: #6b4f4f;
         }
         .faq-details {
-            font-size: 0.9rem;
+            font-size: 1rem;
             margin: 10px 0;
             display: none;
         }
@@ -110,7 +110,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq1')">What should I wear?</div>
             <div class="faq-details" id="faq1">
-                Outdoor Casual – embrace the camp vibes with flannels, jeans, and "classy camping" attire. Think rustic elegance and comfy outdoor wear!
+                Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.
             </div>
         </div>
         <div class="faq">
@@ -122,7 +122,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq3')">Are kids allowed?</div>
             <div class="faq-details" id="faq3">
-                Yes, kids are welcome at our wedding! We want the celebration to be fun for guests of all ages. There will be activities and plenty of space for the little ones to enjoy themselves. However, if you need a quiet space for naps or downtime, we will do our best to have a designated area available.
+                Yes, kids are welcome at our wedding! We want the celebration to be fun for guests of all ages. There will be activities and plenty of space for everyone to enjoy themselves. However, if you need a quiet space for naps or downtime, we will do our best to have a designated area available.
             </div>
         </div>
         <div class="faq">
@@ -134,7 +134,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq5')">How should I RSVP?</div>
             <div class="faq-details" id="faq5">
-                We will be providing more information on how to RSVP as we get closer to the wedding date. Keep an eye out for a formal invitation or on this website. Your timely response is greatly appreciated so we can plan accordingly!
+                The link to RSVP is available on the homepage, as a tab in the top bar as well as HERE <insert link>.  Your timely response is greatly appreciated so we can plan accordingly!
             </div>
         </div>
         <div class="faq">
@@ -152,7 +152,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq8')">What time should I arrive?</div>
             <div class="faq-details" id="faq8">
-                We recommend arriving 30 minutes before the ceremony begins to allow time for parking and getting settled at the ceremony site.
+                We recommend arriving 15-30 minutes before the ceremony begins to allow time for parking and getting settled at the ceremony site.
             </div>
         </div>
         <div class="faq">
@@ -188,13 +188,13 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq14')">Will there be assigned seating?</div>
             <div class="faq-details" id="faq14">
-                Seating will be open at both the ceremony and reception, so feel free to sit where you’re most comfortable!
+                Seating will be open at both the ceremony, so feel free to sit where you’re most comfortable! At the reception, we’ll have assigned 'teams' to help organize activities and make the fun even better.
             </div>
         </div>
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq15')">Is alcohol being served?</div>
             <div class="faq-details" id="faq15">
-                Yes, there will be a selection of alcoholic and non-alcoholic beverages available during the reception. Please drink responsibly and plan transportation accordingly.
+                No, alcohol will not be served. Water, soda, and a few custom non-alcoholic drinks will be available. Please note that the park does not allow alcohol on the premises.
             </div>
         </div>
         <div class="faq">
@@ -218,7 +218,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq19')">Can I stay overnight at Bull Run Regional Park?</div>
             <div class="faq-details" id="faq19">
-                While we do not provide accommodations directly on-site, there are nearby hotels and camping options - including cabins - at Bull Run Regional Park for those who’d like to stay close.
+                While we do not provide accommodations directly on-site, there are nearby hotels and camping options - including cabins - at Bull Run Regional Park for those who’d like to stay close. Feel free to reach out if any you would like any recommendations or need assistance with accommodations. 
             </div>
         </div>
     </div>
