--- a/QA.html
+++ b/QA.html
@@ -206,7 +206,7 @@
         <div class="faq">
             <div class="faq-summary" onclick="toggleFAQ('faq17')">Are gifts expected?</div>
             <div class="faq-details" id="faq17">
-                Your presence at our wedding is the greatest gift of all! If you'd like to give something, please check out our registry page for ideas.
+                Your presence at our wedding is the greatest gift of all! Your love, support, and presence mean the world to us as we embark on this exciting journey together. If you would like to help us build our new life, we have created a home fund that will go towards the purchase of our new home, as well as furniture and other essentials to make it our own. Please know that your contribution is greatly appreciated, but your presence at our celebration is the most important gift of all.
             </div>
         </div>
         <div class="faq">
