--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="line2">Joshua & Emily Teboe</div>
             <div class="date">September 12th, 2025</div>
             <div class="location">Centreville, VA</div>
-            <button class="rsvp-button">RSVP</button>
+            <button class="rsvp-button" onclick="window.location.href='RSVP.html'">RSVP</button>
             <div class="rsvp-text">
                 Please RSVP by August 1st!
             </div>
