--- a/RSVP.html
+++ b/RSVP.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RSVP</title>
+    <link rel="icon" href="images/LogoInBlack.png?v=2" type="image/png">
+    <style>
+        @font-face {
+            font-family: 'Love Script';
+            src: url('Love script.ttf') format('truetype');
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Brush Script MT", cursive;
+            background-color: #ffeee2;
+            text-align: center;
+        }
+        .logo {
+            text-align: center;
+            background-color: #f7ddbb;
+            padding: 10px 0;
+            position: relative;
+            top: 0;
+            width: 100%;
+            z-index: 20;
+        }
+        .logo img {
+            width: 100px;
+            height: auto;
+        }
+        nav {
+            background-color: #f7ddbb;
+            padding: 15px 0;
+            position: relative;
+            width: 100%;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: black;
+            font-size: 18px;
+            font-family: Georgia, serif;
+        }
+        .rsvp-container {
+            max-width: 700px;
+            margin: 30px auto;
+            padding: 20px;
+            background: #fff8f0;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-family: 'Love Script', cursive;
+            font-size: 36px;
+            color: #8a4a39;
+            margin-bottom: 20px;
+        }
+        iframe {
+            width: 100%;
+            height: 1300px;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="logo">
+        <img src="images/LogoInBlack.png" alt="Wedding Logo">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="TheDetails.html">The Details</a></li>
+            <li><a href="OurStory.HTML">Our Story</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
+            <li><a href="QA.html">Q + A</a></li>
+            <li><a href="https://www.honeyfund.com/site/TyingTheTeboes" target="_blank" rel="noopener noreferrer">Registry</a></li>
+        </ul>
+    </nav>
 
+    <div class="rsvp-container">
+        <h1>RSVP to Our Wedding</h1>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe41_7DMB0sIfPp3GjTrvq1wq3ktAEoKPqcjbIGa105fchIeA/viewform?embedded=true"></iframe>
+    </div>
+</body>
+</html>
