--- a/TheDetails.html
+++ b/TheDetails.html
@@ -138,6 +138,7 @@
             <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="QA.html">Q + A</a></li>
             <li><a href="https://www.honeyfund.com/site/TyingTheTeboes" target="_blank" rel="noopener noreferrer">Registry</a></li>
+            <li><a href="RSVP.html">RSVP</a></li>
         </ul>
     </nav>
 
