--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
+            text-align: center;
         }
         nav ul li {
-            margin: 0 15px;
+            margin: 5px 10px;
         }
         nav ul li a {
             text-decoration: none;
@@ -58,39 +60,38 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            position: relative;
             flex-direction: column;
             width: 100%;
             background-image: url('images/flowers15.png');
-            background-size: cover;
-            background-position: top center;
-            background-repeat: no-repeat; /* Ensure the image does not repeat */
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
             min-height: 100vh;
         }
         .main-content .overlay {
             font-family: 'Love Script', cursive;
             text-align: center;
             padding: 15px;
-            width: 100%;
+            width: 90%;
             margin-top: 50px;
             position: relative;
             z-index: 1;
         }
         .main-content .line1 {
-            font-size: 58px;
+            font-size: 8vw;
         }
         .main-content .line2 {
-            font-size: 82px;
+            font-size: 10vw;
         }
         .main-content .date {
             font-family: Georgia, serif;
-            font-size: 32px;
+            font-size: 5vw;
             margin-top: 15px;
             color: #000;
         }
         .main-content .location {
             font-family: Georgia, serif;
-            font-size: 25px;
+            font-size: 5vw;
             margin-top: 5px;
             color: #000;
         }
@@ -98,9 +99,9 @@
             margin-top: 20px;
             background-color: #321660;
             color: white;
-            font-size: 18px;
+            font-size: 4vw;
             font-family: Georgia, serif;
-            padding: 10px 20px;
+            padding: 8px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -113,6 +114,23 @@
             font-weight: bold;
             margin-top: 10px;
             font-family: Georgia, serif;
+        }
+        @media (max-width: 768px) {
+            .main-content {
+                min-height: 80vh;
+                background-size: cover;
+            }
+            .main-content .overlay {
+                padding: 10px;
+                width: 90%;
+            }
+            nav ul {
+                flex-direction: column;
+                text-align: center;
+            }
+            nav ul li {
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
@@ -138,9 +156,7 @@
             <div class="date">September 12th, 2025</div>
             <div class="location">Centreville, VA</div>
             <button class="rsvp-button" onclick="window.location.href='RSVP.html'">RSVP</button>
-            <div class="rsvp-text">
-                Please RSVP by August 1st!
-            </div>
+            <div class="rsvp-text">Please RSVP by August 1st!</div>
         </div>
     </div>
 </body>
