--- a/TheDetails.html
+++ b/TheDetails.html
@@ -3,27 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Details</title>
+    <title>Tying the Teboes</title>
     <link rel="icon" href="images/LogoInBlack.png?v=2" type="image/png">
     <style>
         @font-face {
             font-family: 'Love Script';
             src: url('Love script.ttf') format('truetype');
         }
-        @font-face {
-            font-family: 'Roadster';
-            src: url('roadster-free.regular.ttf') format('truetype');
-        }
-        @font-face {
-            font-family: 'Kingstyle';
-            src: url('Kingstyle.ttf') format('truetype');
-        }
         body {
             margin: 0;
             padding: 0;
-            font-family: Georgia, serif;
+            font-family: "Brush Script MT", cursive;
             background-color: #ffeee2;
-            color: black;
         }
         .logo {
             text-align: center;
@@ -38,100 +29,73 @@
             width: 100px;
             height: auto;
         }
-        nav {
-            background-color: #f7ddbb;
-            padding: 15px 0;
-            position: relative;
-            width: 100%;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-            z-index: 10;
+        .menu-button {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            position: absolute;
+            top: 15px;
+            right: 20px;
+            z-index: 100;
         }
-        nav ul {
+        .nav-menu {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             list-style-type: none;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
+            background-color: #f7ddbb;
         }
-        nav ul li {
-            margin: 0 15px;
+        .nav-menu li {
+            margin: 5px 10px;
         }
-        nav ul li a {
+        .nav-menu li a {
             text-decoration: none;
             color: black;
             font-size: 18px;
             font-family: Georgia, serif;
         }
-        .title {
-            text-align: center;
-            font-family: 'Love Script', cursive;
-            font-size: 65px;
-            margin-top: 20px;
-        }
-        .details-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            padding: 40px;
-        }
-        .text-box {
-            width: 45%;
-            background: rgba(255, 255, 255, 0);
-            padding: 20px;
-            position: relative;
-        }
-        .text-box h2 {
-            font-size: 28px;
-            font-family: 'Roadster', sans-serif;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-        .text-box p {
-            font-size: 20px;
-            font-family: Georgia, serif;
-            margin-bottom: 20px;
-        }
-        .text-box p span {
-            font-weight: bold;
-        }
-        .timeline {
-            width: 45%;
-            display: flex;
-            justify-content: center;
-        }
-        .timeline img {
-            max-width: 100%;
-            height: auto;
-            cursor: pointer;
-        }
-        .text-box .campsite {
-            display: block;
-            margin: 0 auto 20px;
-            width: 100%;
-            max-width: 300px;
-            height: auto;
-        }
-        .park-map-container {
-            background-color: #361c54;
-            text-align: center;
-            padding: 20px;
-        }
-        .park-map {
-            display: block;
-            margin: 20px auto;
-            width: 100%;
-            max-width: 800px;
-            height: auto;
-            cursor: pointer;
+        @media (max-width: 768px) {
+            .menu-button {
+                display: block;
+            }
+            .nav-menu {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 50px;
+                right: 20px;
+                background-color: #f7ddbb;
+                width: 200px;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+                padding: 10px;
+                border-radius: 5px;
+            }
+            .nav-menu.active {
+                display: flex;
+            }
+            .nav-menu li {
+                margin: 10px 0;
+                text-align: center;
+            }
         }
     </style>
+    <script>
+        function toggleMenu() {
+            document.querySelector('.nav-menu').classList.toggle('active');
+        }
+    </script>
 </head>
 <body>
     <div class="logo">
         <img src="images/LogoInBlack.png" alt="Wedding Logo">
+        <button class="menu-button" onclick="toggleMenu()">☰</button>
     </div>
     <nav>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="TheDetails.html">The Details</a></li>
             <li><a href="OurStory.HTML">Our Story</a></li>
@@ -141,39 +105,15 @@
             <li><a href="RSVP.html">RSVP</a></li>
         </ul>
     </nav>
-
-    <h1 class="title">The Details</h1>
-
-    <div class="details-container">
-        <div class="text-box">
-            <img src="images/campsite.png" alt="Campsite Illustration" class="campsite">
-
-            <h2>Arrival and Parking</h2>
-            <p>If you are attending in person, please bring your invitation or mention you are here for the Teboe wedding at the gatehouse entrance.</p>
-            <p>Two large parking areas, circled on the park map below, are available for your convenience. The path from the parking lot to the ceremony site is relatively short but involves rough terrain, including gravel and grass. Please wear appropriate footwear, and let us know in advance if you require on-site transportation assistance.</p>
-
-            <h2>Ceremony & Reception</h2>
-            <p>The ceremony will take place outdoors, rain or shine. Handheld fans will be provided during the ceremony, and electric fans will be available at the reception to keep you cool.</p>
-            <p>Join us afterward for drinks, dinner, and celebration! Both the ceremony and reception will be held outdoors, with minimal cover at the ceremony site. Please prepare for weather conditions like rain or sun. All events are within walking distance of each other at Bull Run Regional Park. Transportation assistance, such as utility carts, can be available for guests who may need it. Please notify us beforehand.</p>
-
-            <h2>Attire</h2>
-            <p>Outdoor Casual – Embrace the camp vibes with flannels, jeans, and 'classy camping' attire. If you prefer to wear a dress, opt for flowy styles or anything comfortable for the outdoors. Keep in mind that most seating consists of benches, so choose fabrics that won’t snag easily.</p>
-            <p>We recommend flat or sturdy shoes, such as boots, wedges, or sandals, as the terrain consists of gravel paths and grassy areas. Thin heels or stilettos may not be ideal for the outdoor setting.</p>
-
-            <h2>RSVP</h2>
-            <p>Please RSVP by <span>August 1st</span> at the latest!</p>
+    <div class="main-content">
+        <div class="overlay">
+            <div class="line1">The Wedding of</div>
+            <div class="line2">Joshua & Emily Teboe</div>
+            <div class="date">September 12th, 2025</div>
+            <div class="location">Centreville, VA</div>
+            <button class="rsvp-button" onclick="window.location.href='RSVP.html'">RSVP</button>
+            <div class="rsvp-text">Please RSVP by August 1st!</div>
         </div>
-
-        <div class="timeline">
-            <a href="images/Timeline.png" target="_blank">
-                <img src="images/Timeline.png" alt="Wedding Timeline">
-            </a>
-        </div>
-    </div>
-    <div class="park-map-container">
-        <a href="images/Bull Run Park Map.jpg" target="_blank">
-            <img src="images/Bull Run Park Map.jpg" alt="Bull Run Park Map" class="park-map">
-        </a>
     </div>
 </body>
 </html>
