--- a/index.html
+++ b/index.html
@@ -29,117 +29,81 @@
             width: 100px;
             height: auto;
         }
-        nav {
+        .menu-button {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            z-index: 100;
             background-color: #f7ddbb;
-            padding: 15px 0;
-            position: relative;
-            width: 100%;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-            z-index: 10;
+            padding: 10px;
+            border-radius: 5px;
         }
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
+        nav {
+            position: relative;
+        }
+        .nav-menu {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            text-align: center;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #f7ddbb;
         }
-        nav ul li {
+        .nav-menu li {
             margin: 5px 10px;
         }
-        nav ul li a {
+        .nav-menu li a {
             text-decoration: none;
             color: black;
             font-size: 18px;
             font-family: Georgia, serif;
         }
-        .main-content {
-            margin-top: 80px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 100%;
-            background-image: url('images/flowers15.png');
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            min-height: 100vh;
-        }
-        .main-content .overlay {
-            font-family: 'Love Script', cursive;
-            text-align: center;
-            padding: 15px;
-            width: 90%;
-            margin-top: 50px;
-            position: relative;
-            z-index: 1;
-        }
-        .main-content .line1 {
-            font-size: 8vw;
-        }
-        .main-content .line2 {
-            font-size: 10vw;
-        }
-        .main-content .date {
-            font-family: Georgia, serif;
-            font-size: 5vw;
-            margin-top: 15px;
-            color: #000;
-        }
-        .main-content .location {
-            font-family: Georgia, serif;
-            font-size: 5vw;
-            margin-top: 5px;
-            color: #000;
-        }
-        .main-content .rsvp-button {
-            margin-top: 20px;
-            background-color: #321660;
-            color: white;
-            font-size: 4vw;
-            font-family: Georgia, serif;
-            padding: 8px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .main-content .rsvp-button:hover {
-            background-color: #421d7e;
-        }
-        .main-content .rsvp-text {
-            font-size: small;
-            font-weight: bold;
-            margin-top: 10px;
-            font-family: Georgia, serif;
-        }
         @media (max-width: 768px) {
-            .main-content {
-                min-height: 80vh;
-                background-size: cover;
+            .menu-button {
+                display: block;
             }
-            .main-content .overlay {
-                padding: 10px;
-                width: 90%;
-            }
-            nav ul {
+            .nav-menu {
+                display: none;
                 flex-direction: column;
-                text-align: center;
+                position: fixed;
+                top: 50px;
+                right: 20px;
+                background-color: #f7ddbb;
+                width: 200px;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+                padding: 10px;
+                border-radius: 5px;
             }
-            nav ul li {
+            .nav-menu.active {
+                display: flex;
+            }
+            .nav-menu li {
                 margin: 10px 0;
+                text-align: center;
             }
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.querySelector(".menu-button").addEventListener("click", function() {
+                document.querySelector(".nav-menu").classList.toggle("active");
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="logo">
         <img src="images/LogoInBlack.png" alt="Wedding Logo">
+        <button class="menu-button">☰</button>
     </div>
     <nav>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="TheDetails.html">The Details</a></li>
             <li><a href="OurStory.HTML">Our Story</a></li>
